# MLforfinance

./: .gitignore  README.md  pyproject.toml
addit_notes/: NumpyStandard.ipynb  ScikitLearn.ipynb
clases/: clase_1.ipynb  clase_2_lasso.py  clase_2_nn.py  clase_2_notas.ipynb  clase_3.ipynb  clase_3_classif.py  clase_3_reg.py  clase_4.ipynb  clase_4_clustering.py  clase_4_ensemble.py  clase_5_gan.py  clase_5_repr.py  clase_5_repr_nn.py  clase_5_rl_gym.py  clase_5_yc.py
data/: F-F_Research_Data_5_Factors_2x3_daily.csv  bonos_usd_prices.csv  bonos_usd_ytms.csv  default.csv  df_predict.xlsx  df_train.xlsx  fondos_comunes.csv  selected_etfs.csv  spx.csv  stocks.csv
mlfin/: plotting.py  printing.py  utils.py
ps/: ps1.py  ps1_logs.txt  ps1_test.py  ps2.py  ps2_logs.txt  ps2_test.py  ps3.py  ps3_logs.txt  ps3_test.py  ps4.py  ps4_logs.txt  ps4_test.py
ps/outputs/: ps4_comparativo.csv
