[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlfin"
version = "0.1.0"
description = "Machine Learning for Finance - Tools and utilities for financial machine learning"
authors = [
    {name = "Lionel Modi", email = "lionel.modi@utdt.edu"},
    {name = "Paola Nunez", email = "pnunezherrero@utdt.edu"}
]
readme = "readme.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]

# Dependencias principales
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "tables>=3.6.0",
    "statsmodels>=0.12.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "keras>=2.8.0",
    "scikeras>=0.8.0",
    "gymnasium>=0.26.0",
    "torch>=1.12.0",
    "logger>=1.4",
    "flake8>=7.3.0",
    "cvxpy>=1.7.1",
]

# Dependencias opcionales para diferentes características
[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

visualization = [
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]

deep-learning = [
    "tensorflow>=2.8.0",
    "tensorboard>=2.8.0",
]

all = [
    "mlfin[dev,visualization,deep-learning]"
]

[project.urls]
Homepage = "https://github.com/nunezpaola/MLforfinance"
Repository = "https://github.com/nunezpaola/MLforfinance"
Issues = "https://github.com/nunezpaola/MLforfinance/issues"

# Configuración de herramientas
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--cov=mlfin",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Configuración de setuptools para especificar qué paquetes incluir
[tool.setuptools.packages.find]
include = ["mlfin*"]
exclude = ["tests*", "ps*", "data*", "clases*"]
